Added password hashing for user
